# hr-x

./: .gitignore  Makefile  README.md
doc/: HRX_dirigeants.pptx
doc/colloque/organisation/: note-de-cadrage.md  tableau-suivi.md
doc/constat/: 01_constat.md  02_couts.md  03_article.md
src/hrx/: exemple-candidat.hrx
src/hrx-app/: Dockerfile  Makefile  forms.py  main.py  package-lock.json  package.json  requirements.txt  utils.py
src/hrx-app/static/: hrx.js
src/hrx-app/templates/: _award_item.html  base.html  (+12 more)
src/hrx/sdk/python/: LICENSE  Makefile  PUBLISH.md  README.md  __init__.py  enums.py  exc.py  mkdocs.yml  pyproject.toml  pyrightconfig.json  test.ipynb
src/hrx/sdk/python/hrx/: __init__.py  __init__.pyi  api.py  api.pyi  errors.py  errors.pyi  models.py  models.pyi
src/hrx/sdk/python/models/: __init__.py  education.py  experiences.py  hrx.py  identity.py  preferences.py  skills.py
src/hrx/sdk/python/models/credentials/: __init__.py  awards.py  bibliography.py  references.py
src/hrx/sdk/python/site/: 404.html  Plaquette.sla  search.html
src/hrx/sdk/python/site/colloque/organisation/note-de-cadrage/: index.html
src/hrx/sdk/python/site/colloque/organisation/tableau-suivi/: index.html
src/hrx/sdk/python/site/constat/01_constat/: index.html
src/hrx/sdk/python/site/constat/02_couts/: index.html
src/hrx/sdk/python/site/constat/03_article/: index.html
src/hrx/sdk/python/site/search/: search_index.json
src/hrx/sdk/python/tests/: conftest.py  test_hrx_api.py
typings/flask_wtf/: __init__.pyi  _compat.pyi  csrf.pyi  file.pyi  form.pyi  i18n.pyi
(+50 files in other folders)
