[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hrxlib"
version = "0.1.0"
description = "HRX SDK for Python — types and helpers for HRX models"
readme = "README.md"
authors = [{name = "HRX Project", email = "rverschuur@audit-io.fr"}]
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.8"
dependencies = [
    "pydantic>=2,<3",
    "jsonschema>=4,<5",
]
classifiers = [
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3 :: Only",
	"Programming Language :: Python :: 3.8",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
hrx = ["*.pyi", "py.typed"]

[tool.setuptools.packages.find]
where = ["."]
include = ["hrx*"]

[project.urls]
"Homepage" = "https://example.com/hrx"
"Source" = "https://example.com/hrx/repo"

[project.optional-dependencies]
test = [
    "pytest>=8,<9",
]
